test/pending/neg/plugin-cyclic-dependency/lib/plugins.jar.desired.sha1
7e6be9e33a87194e7061f94f6be115619f91ada2 ?plugins.jar
